--- a/TEXTREADING/readingText/Text_globalwarming.html
+++ b/TEXTREADING/readingText/Text_globalwarming.html
@@ -134,7 +134,8 @@
                     </div>
                     <div class="example">
                         <span>e.g.</span>
-                        Once again it will be the taxpayer who has to foot the bill.<br>这一次掏腰包的又得是纳税人。
+                        <p>Once again it will be the taxpayer who has to foot the bill.</p>
+                        <p>这一次掏腰包的又得是纳税人。</p>
                     </div>
                 </div>
             </div>
@@ -161,8 +162,8 @@
                     </div>
                     <div class="example">
                         <span>e.g.</span>
-                        To that extent they helped bring about their own destruction
-                        <br>他们正是如此推波助澜，导致了自己的毁灭。
+                        <p>To that extent they helped bring about their own destruction</p>
+                        <p>他们正是如此推波助澜，导致了自己的毁灭。</p>
                     </div>
                 </div>
             </div>
@@ -193,8 +194,8 @@
                     </div>
                     <div class="example">
                         <span>e.g.</span>
-                        Most of his problems stem from a lack of confidence.
-                        <br>他的多数问题源于自信心不足。
+                        <p>Most of his problems stem from a lack of confidence.</p>
+                        <p>他的多数问题源于自信心不足。</p>
                     </div>
                 </div>
             </div>
@@ -219,8 +220,8 @@
                     </div>
                     <div class="example">
                         <span>e.g.</span>
-                        The next moment there was an almighty crash.<br>
-                        接着发生了剧烈的撞击。
+                        <p>The next moment there was an almighty crash.</p>
+                        <p>接着发生了剧烈的撞击。</p>
                     </div>
                 </div>
             </div>
@@ -246,8 +247,8 @@
                     </div>
                     <div class="example">
                         <span>e.g.</span>
-                        The supplier shall bear the costs for technical services.
-                        <br>技术服务的费用由供货商承担。
+                        <p>The supplier shall bear the costs for technical services.</p>
+                        <p>技术服务的费用由供货商承担。</p>
                     </div>
                 </div>
             </div>
@@ -275,7 +276,8 @@
                     </div>
                     <div class="example">
                         <span>e.g.</span>
-                        The impact of the blow knocked Jack off balance.<br>这一记猛击把杰克打了个趔趄。
+                        <p>The impact of the blow knocked Jack off balance.</p>
+                        <p>这一记猛击把杰克打了个趔趄。</p>
                     </div>
                 </div>
             </div>
@@ -304,8 +306,8 @@
                     </div>
                     <div class="example">
                         <span>e.g.</span>
-                        He desperately needed cash to bail out the ailing restaurant.<br>
-                        他急需现金使经营惨淡的餐馆走出困境。
+                        <p>He desperately needed cash to bail out the ailing restaurant.</p>
+                        <p>他急需现金使经营惨淡的餐馆走出困境。</p>
                     </div>
                 </div>
             </div>
@@ -334,8 +336,9 @@
                     </div>
                     <div class="example">
                         <span>e.g.</span>
-                        And so deservedly dear as he is to his sister, whatever anxiety she may feel on his behalf is
-                        natural and amiable.<br>既然他确实值得他妹妹珍惜，那么，不管她替他担的是什么忧，那也是合情合理，亲切可喜。
+                        <p>And so deservedly dear as he is to his sister, whatever anxiety she may feel on his behalf is
+                            natural and amiable.</p>
+                        <p>既然他确实值得他妹妹珍惜，那么，不管她替他担的是什么忧，那也是合情合理，亲切可喜。</p>
                     </div>
                 </div>
             </div>
@@ -362,7 +365,8 @@
                     </div>
                     <div class="example">
                         <span>e.g.</span>
-                        People sense your strength and do not impose on you.<br>人们感受到你的力量，就不会去强迫你。
+                        <p>People sense your strength and do not impose on you.</p>
+                        <p>人们感受到你的力量，就不会去强迫你。</p>
                     </div>
                 </div>
             </div>
@@ -388,8 +392,9 @@
                     </div>
                     <div class="example">
                         <span>e.g.</span>
-                        That deal would create, in effect, the world's biggest
-                        airline.<br>事实上，这一协议将促成世界最大航空公司的成立。
+                        <p>That deal would create, in effect, the world's biggest
+                            airline.</p>
+                        <p>事实上，这一协议将促成世界最大航空公司的成立。</p>
                     </div>
                 </div>
             </div>
@@ -416,8 +421,8 @@
                     </div>
                     <div class="example">
                         <span>e.g.</span>
-                        Try to anticipate what your child will do and forestall problems.<br>
-                        尽量预见你的孩子会干什么，并预先阻止问题发生。
+                        <p>Try to anticipate what your child will do and forestall problems.</p>
+                        <p>尽量预见你的孩子会干什么，并预先阻止问题发生。</p>
                     </div>
                 </div>
             </div>
@@ -446,8 +451,8 @@
                     </div>
                     <div class="example">
                         <span>e.g.</span>
-                        There was no real barrier between reality and fantasy in his mind.
-                        <br>他的头脑中，现实与幻想之间没有真正的界线。
+                        <p>There was no real barrier between reality and fantasy in his mind.</p>
+                        <p>他的头脑中，现实与幻想之间没有真正的界线。</p>
                     </div>
                 </div>
             </div>
@@ -474,7 +479,8 @@
                     </div>
                     <div class="example">
                         <span>e.g.</span>
-                        These industries are the crown jewels of the French economy.<br>这些产业是法国经济的珍宝。
+                        <p>These industries are the crown jewels of the French economy.</p>
+                        <p>这些产业是法国经济的珍宝。</p>
                     </div>
                 </div>
             </div>
@@ -501,7 +507,8 @@
                     </div>
                     <div class="example">
                         <span>e.g.</span>
-                        Catering may now account for close on a quarter of pub turnover.<br>承办酒席现在可能占酒吧营业额的近1/4。
+                        <p>Catering may now account for close on a quarter of pub turnover.</p>
+                        <p>承办酒席现在可能占酒吧营业额的近1/4。</p>
                     </div>
                 </div>
             </div>
@@ -527,7 +534,8 @@
                     </div>
                     <div class="example">
                         <span>e.g.</span>
-                        A lot of people will object to the book.<br>很多人都会对这本书表示反感。
+                        <p>A lot of people will object to the book.</p>
+                        <p>很多人都会对这本书表示反感。</p>
                     </div>
                 </div>
             </div>
@@ -554,7 +562,8 @@
                     </div>
                     <div class="example">
                         <span>e.g.</span>
-                        We are currently investigating a number of alternative options.<br>我们现在正在研究一系列可供替代的选择方案。
+                        <p>We are currently investigating a number of alternative options.</p>
+                        <p>我们现在正在研究一系列可供替代的选择方案。</p>
                     </div>
                 </div>
             </div>
@@ -584,7 +593,8 @@
                     </div>
                     <div class="example">
                         <span>e.g.</span>
-                        A solution is still some way off.<br>解决办法尚需时日。
+                        <p>A solution is still some way off.</p>
+                        <p>解决办法尚需时日。</p>
                     </div>
                 </div>
             </div>
@@ -610,7 +620,8 @@
                     </div>
                     <div class="example">
                         <span>e.g.</span>
-                        Please don't spring any nasty surprises on me.<br>请不要突然告诉我任何让我不愉快的事情。
+                        <p>Please don't spring any nasty surprises on me.</p>
+                        <p>请不要突然告诉我任何让我不愉快的事情。</p>
                     </div>
                 </div>
             </div>
@@ -637,7 +648,8 @@
                     </div>
                     <div class="example">
                         <span>e.g.</span>
-                        Wolf hunting, always the team attack, all do their bit.<br>狼在捕猎时，总是团队出击，各尽其位。
+                        <p>Wolf hunting, always the team attack, all do their bit.</p>
+                        <p>狼在捕猎时，总是团队出击，各尽其位。</p>
                     </div>
                 </div>
             </div>
@@ -664,7 +676,8 @@
                     </div>
                     <div class="example">
                         <span>e.g.</span>
-                        There is little inducement for them to work harder.<br>没有什么动力能促使他们加把劲工作。
+                        <p>There is little inducement for them to work harder.</p>
+                        <p>没有什么动力能促使他们加把劲工作。</p>
                     </div>
                 </div>
             </div>
@@ -691,8 +704,9 @@
                     </div>
                     <div class="example">
                         <span>e.g.</span>
-                        Beloved ones you are strong, resilient, and capable of managing these
-                        challenges.<br>我亲爱的人们，你是强壮的、有弹性的、并应付这些挑战。
+                        <p>Beloved ones you are strong, resilient, and capable of managing these
+                            challenges.</p>
+                        <p>我亲爱的人们，你是强壮的、有弹性的、并应付这些挑战。</p>
                     </div>
                 </div>
             </div>
@@ -719,7 +733,8 @@
                     </div>
                     <div class="example">
                         <span>e.g.</span>
-                        The omens for their future success are not good.<br>他们未来成功的预兆不祥。
+                        <p>The omens for their future success are not good.</p>
+                        <p>他们未来成功的预兆不祥。</p>
                     </div>
                 </div>
             </div>
@@ -745,8 +760,8 @@
                     </div>
                     <div class="example">
                         <span>e.g.</span>
-                        Well, it may be elementary, but I have a conundrum.
-                        <br>唔，也许很简单，不过我有一个难题。
+                        <p>Well, it may be elementary, but I have a conundrum.</p>
+                        <p>唔，也许很简单，不过我有一个难题。</p>
                     </div>
                 </div>
             </div>
