--- a/TEXTREADING/readingWelcome/readingWelcome.html
+++ b/TEXTREADING/readingWelcome/readingWelcome.html
@@ -49,6 +49,13 @@
                     <h5 class="menuText">回到顶部</h5>
                 </a>
             </li>
+
+            <li class="menuItem">
+                <a href="#" class="menuOption" type="button">
+                    <i class="fa-solid fa-plus iconstyle"></i>
+                    <h5 class="menuText">添加页面</h5>
+                </a>
+            </li>
         </ul>
         <div class="about" id="about"></div>
         <div class="menuUser">
@@ -106,7 +113,8 @@
                         <!-- 图片在Boxcss文件以background加载 -->
                         <div class="boxtext">
                             <header>
-                                <a href="../readingText/Text_globalwarming.html" class="boxtitle">Global warming <br> is coming for your
+                                <a href="../readingText/Text_globalwarming.html" class="boxtitle">Global warming <br> is
+                                    coming for your
                                     house.<br>Who will foot the bill?</a>
                             </header>
                             <ul class="boxcontent">
